--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>*</title>
+        <style>
+            .center {
+             text-align: center
+            }
+        </style>
     </head>
     <body>
-<code>
---- girish sastry  ---
-</code>
-        <center>
-            <pre>
-I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy.
+        <pre class="center">
+         --- girish sastry  ---
+        
+        I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy.
+        
+        To contact me, please email: g.sastry+1b7a@gmail.com
+        ----------------------
+        </pre>
+    </body>
+</html>h
 
-To contact me, please email: g.sastry+1b7a@gmail.com
-</pre>
-        </center>
-
-<pre>
-----------------------
-</pre>
