--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <pre class="center">
             --- girish sastry  ---
             
-            I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy.
-            
-            To contact me, please email: g.sastry+1b7a@gmail.com
+            I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy. To contact me, please email: g.sastry+1b7a@gmail.com
             ----------------------
             </pre>
         </div>
