--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     </head>
     <body>
         <div style="margin-top:70px">
-            <pre class="center">
-            --- girish sastry  ---
-            
-            I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy. To contact me, please email: g.sastry+1b7a@gmail.com
-            ----------------------
+            <pre>
+            ------------------------------ girish sastry -----------------------------------
+
+            I am a researcher at OpenAI interested in issues of AI ethics, policy, & 
+            strategy. To contact me, please email: g.sastry+1b7a@gmail.com
+
+            --------------------------------------------------------------------------------
             </pre>
         </div>
     </body>
