--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>*</title>
         <style>
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                height: 100vh;
+                margin: 0;
+                padding-top: 15vh; /* Adjust this value to move content up or down */
+            }
             .center {
-             text-align: center
+                text-align: center;
+            }
+            pre {
+                white-space: pre-wrap;
+                word-wrap: break-word;
             }
         </style>
     </head>
     <body>
-        <div style="margin-top:70px">
+        <div class="center">
             <pre>
             ------------------------------ girish sastry -----------------------------------
 
