--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
                 margin: 0;
                 padding-top: 15vh; /* Adjust this value to move content up or down */
             }
-            .center {
-                text-align: center;
-            }
             pre {
                 white-space: pre-wrap;
                 word-wrap: break-word;
@@ -24,14 +21,13 @@
     <body>
         <div class="center">
             <pre>
-            ------------------------------ girish sastry -----------------------------------
+------------------------------- girish sastry ------------------------------------
 
-            I am a researcher at OpenAI interested in issues of AI ethics, policy, & 
-            strategy. To contact me, please email: g.sastry+1b7a@gmail.com
+I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy. 
+To contact me, please email: g.sastry+1b7a@gmail.com
 
-            --------------------------------------------------------------------------------
+----------------------------------------------------------------------------------
             </pre>
         </div>
     </body>
 </html>
-
