--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <pre>
 ------------------------------- girish sastry ------------------------------------
 
-I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy. 
+I am a researcher at OpenAI working on issues in the governance of advanced AI. 
 To contact me, please email: g.sastry+1b7a@gmail.com
 
 ----------------------------------------------------------------------------------
