--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <pre>
 ------------------------------- girish sastry ------------------------------------
 
-I am a researcher at OpenAI working on issues in the governance of advanced AI. 
+I am working on issues in the governance of advanced AI. I was previously on the Policy Research team at OpenAI.
 To contact me, please email: g.sastry+1b7a@gmail.com
 
 ----------------------------------------------------------------------------------
